gen/trabalhoFinal_lucasParser.py
# Generated from C:/Users/lucas/Documents/tabalho-final-compiladores\trabalhoFinal_lucas.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class trabalhoFinal_lucasParser ( Parser ):

    grammarFileName = "trabalhoFinal_lucas.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'const'", "'int'", "'real'", "'bool'", 
                     "'String'", "','", "'='", "'('", "')'", "'{'", "'}'", 
                     "'main'", "'if'", "'else'", "'break'", "'print'", "'input'", 
                     "'for'", "'while'", "'return'", "'!'", "'-'", "'*'", 
                     "'/'", "'+'", "'=='", "'!='", "'>='", "'<='", "'>'", 
                     "'<'", "'&&'", "'||'", "'void'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "VOID", "INT", 
                      "BOOL", "REAL", "STRING", "ID", "WS", "COMMENT1", 
                      "COMMENT2" ]

    RULE_prog = 0
    RULE_decVarConst = 1
    RULE_tipo = 2
    RULE_listaIds = 3
    RULE_listaAtrib = 4
    RULE_atrib = 5
    RULE_funcBloco = 6
    RULE_decFunc = 7
    RULE_parametros = 8
    RULE_main = 9
    RULE_comandos = 10
    RULE_comandosLoop = 11
    RULE_break = 12
    RULE_print = 13
    RULE_input = 14
    RULE_for = 15
    RULE_while = 16
    RULE_return = 17
    RULE_atribuicao = 18
    RULE_callFunc = 19
    RULE_expr = 20
    RULE_termo = 21
    RULE_termo2 = 22
    RULE_termo3 = 23
    RULE_termo4 = 24
    RULE_termo5 = 25
    RULE_termo6 = 26
    RULE_termo7 = 27
    RULE_fator = 28
    RULE_dado = 29
    RULE_not = 30
    RULE_minusUni = 31
    RULE_multiDiv = 32
    RULE_addMinus = 33
    RULE_equal = 34
    RULE_comp = 35
    RULE_and = 36
    RULE_or = 37

    ruleNames =  [ "prog", "decVarConst", "tipo", "listaIds", "listaAtrib", 
                   "atrib", "funcBloco", "decFunc", "parametros", "main", 
                   "comandos", "comandosLoop", "break", "print", "input", 
                   "for", "while", "return", "atribuicao", "callFunc", "expr", 
                   "termo", "termo2", "termo3", "termo4", "termo5", "termo6", 
                   "termo7", "fator", "dado", "not", "minusUni", "multiDiv", 
                   "addMinus", "equal", "comp", "and", "or" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    VOID=35
    INT=36
    BOOL=37
    REAL=38
    STRING=39
    ID=40
    WS=41
    COMMENT1=42
    COMMENT2=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main(self):
            return self.getTypedRuleContext(trabalhoFinal_lucasParser.MainContext,0)


        def decVarConst(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(trabalhoFinal_lucasParser.DecVarConstContext)
            else:
                return self.getTypedRuleContext(trabalhoFinal_lucasParser.DecVarConstContext,i)


        def decFunc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(trabalhoFinal_lucasParser.DecFuncContext)
            else:
                return self.getTypedRuleContext(trabalhoFinal_lucasParser.DecFuncContext,i)


        def getRuleIndex(self):
            return trabalhoFinal_lucasParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = trabalhoFinal_lucasParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 76
                    self.decVarConst() 
                self.state = 81
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 1133871366264) != 0:
                self.state = 82
                self.decFunc()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.main()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecVarConstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return trabalhoFinal_lucasParser.RULE_decVarConst

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DecVarContext(DecVarConstContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a trabalhoFinal_lucasParser.DecVarConstContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def tipo(self):
            return self.getTypedRuleContext(trabalhoFinal_lucasParser.TipoContext,0)

        def listaIds(self):
            return self.getTypedRuleContext(trabalhoFinal_lucasParser.ListaIdsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecVar" ):
                listener.enterDecVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecVar" ):
                listener.exitDecVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecVar" ):
                return visitor.visitDecVar(self)
            else:
                return visitor.visitChildren(self)


    class DecConstContext(DecVarConstContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a trabalhoFinal_lucasParser.DecVarConstContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def tipo(self):
            return self.getTypedRuleContext(trabalhoFinal_lucasParser.TipoContext,0)

        def listaAtrib(self):
            return self.getTypedRuleContext(trabalhoFinal_lucasParser.ListaAtribContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecConst" ):
                listener.enterDecConst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecConst" ):
                listener.exitDecConst(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecConst" ):
                return visitor.visitDecConst(self)
            else:
                return visitor.visitChildren(self)



    def decVarConst(self):

        localctx = trabalhoFinal_lucasParser.DecVarConstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decVarConst)
        try:
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4, 5, 6]:
                localctx = trabalhoFinal_lucasParser.DecVarContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.tipo()
                self.state = 91
                self.listaIds()
                self.state = 92
                self.match(trabalhoFinal_lucasParser.T__0)
                pass
            elif token in [2]:
                localctx = trabalhoFinal_lucasParser.DecConstContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.match(trabalhoFinal_lucasParser.T__1)
                self.state = 95
                self.tipo()
                self.state = 96
                self.listaAtrib()
                self.state = 97
                self.match(trabalhoFinal_lucasParser.T__0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return trabalhoFinal_lucasParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = trabalhoFinal_lucasParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            _la = self._input.LA(1)
            if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 120) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaIdsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(trabalhoFinal_lucasParser.ID)
            else:
                return self.getToken(trabalhoFinal_lucasParser.ID, i)

        def getRuleIndex(self):
            return trabalhoFinal_lucasParser.RULE_listaIds

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaIds" ):
                listener.enterListaIds(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaIds" ):
                listener.exitListaIds(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaIds" ):
                return visitor.visitListaIds(self)
            else:
                return visitor.visitChildren(self)




    def listaIds(self):

        localctx = trabalhoFinal_lucasParser.ListaIdsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_listaIds)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(trabalhoFinal_lucasParser.ID)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 104
                self.match(trabalhoFinal_lucasParser.T__6)
                self.state = 105
                self.match(trabalhoFinal_lucasParser.ID)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaAtribContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atrib(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(trabalhoFinal_lucasParser.AtribContext)
            else:
                return self.getTypedRuleContext(trabalhoFinal_lucasParser.AtribContext,i)


        def getRuleIndex(self):
            return trabalhoFinal_lucasParser.RULE_listaAtrib

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaAtrib" ):
                listener.enterListaAtrib(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaAtrib" ):
                listener.exitListaAtrib(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaAtrib" ):
                return visitor.visitListaAtrib(self)
            else:
                return visitor.visitChildren(self)




    def listaAtrib(self):

        localctx = trabalhoFinal_lucasParser.ListaAtribContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_listaAtrib)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.atrib()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 112
                self.match(trabalhoFinal_lucasParser.T__6)
                self.state = 113
                self.atrib()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(trabalhoFinal_lucasParser.ID, 0)

        def dado(self):
            return self.getTypedRuleContext(trabalhoFinal_lucasParser.DadoContext,0)


        def getRuleIndex(self):
            return trabalhoFinal_lucasParser.RULE_atrib

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtrib" ):
                listener.enterAtrib(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtrib" ):
                listener.exitAtrib(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtrib" ):
                return visitor.visitAtrib(self)
            else:
                return visitor.visitChildren(self)




    def atrib(self):

        localctx = trabalhoFinal_lucasParser.AtribContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_atrib)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(trabalhoFinal_lucasParser.ID)
            self.state = 120
            self.match(trabalhoFinal_lucasParser.T__7)
            self.state = 121
            self.dado()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncBlocoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decVarConst(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(trabalhoFinal_lucasParser.DecVarConstContext)
            else:
                return self.getTypedRuleContext(trabalhoFinal_lucasParser.DecVarConstContext,i)


        def comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(trabalhoFinal_lucasParser.ComandosContext)
            else:
                return self.getTypedRuleContext(trabalhoFinal_lucasParser.ComandosContext,i)


        def getRuleIndex(self):
            return trabalhoFinal_lucasParser.RULE_funcBloco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncBloco" ):
                listener.enterFuncBloco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncBloco" ):
                listener.exitFuncBloco(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncBloco" ):
                return visitor.visitFuncBloco(self)
            else:
                return visitor.visitChildren(self)




    def funcBloco(self):

        localctx = trabalhoFinal_lucasParser.FuncBlocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcBloco)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 124) != 0:
                self.state = 123
                self.decVarConst()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 129
                self.comandos()
                self.state = 132 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 1099515707392) != 0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecFuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return trabalhoFinal_lucasParser.RULE_decFunc

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DecFuncaoContext(DecFuncContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a trabalhoFinal_lucasParser.DecFuncContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(trabalhoFinal_lucasParser.ID, 0)
        def parametros(self):
            return self.getTypedRuleContext(trabalhoFinal_lucasParser.ParametrosContext,0)

        def funcBloco(self):
            return self.getTypedRuleContext(trabalhoFinal_lucasParser.FuncBlocoContext,0)

        def tipo(self):
            return self.getTypedRuleContext(trabalhoFinal_lucasParser.TipoContext,0)

        def VOID(self):
            return self.getToken(trabalhoFinal_lucasParser.VOID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecFuncao" ):
                listener.enterDecFuncao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecFuncao" ):
                listener.exitDecFuncao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecFuncao" ):
                return visitor.visitDecFuncao(self)
            else:
                return visitor.visitChildren(self)



    def decFunc(self):

        localctx = trabalhoFinal_lucasParser.DecFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_decFunc)
        try:
            localctx = trabalhoFinal_lucasParser.DecFuncaoContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4, 5, 6]:
                self.state = 134
                self.tipo()
                pass
            elif token in [35]:
                self.state = 135
                self.match(trabalhoFinal_lucasParser.VOID)
                pass
            elif token in [40]:
                pass
            else:
                pass
            self.state = 138
            self.match(trabalhoFinal_lucasParser.ID)
            self.state = 139
            self.match(trabalhoFinal_lucasParser.T__8)
            self.state = 140
            self.parametros()
            self.state = 141
            self.match(trabalhoFinal_lucasParser.T__9)
            self.state = 142
            self.match(trabalhoFinal_lucasParser.T__10)
            self.state = 143
            self.funcBloco()
            self.state = 144
            self.match(trabalhoFinal_lucasParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(trabalhoFinal_lucasParser.TipoContext)
            else:
                return self.getTypedRuleContext(trabalhoFinal_lucasParser.TipoContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(trabalhoFinal_lucasParser.ID)
            else:
                return self.getToken(trabalhoFinal_lucasParser.ID, i)

        def getRuleIndex(self):
            return trabalhoFinal_lucasParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametros" ):
                return visitor.visitParametros(self)
            else:
                return visitor.visitChildren(self)




    def parametros(self):

        localctx = trabalhoFinal_lucasParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 120) != 0:
                self.state = 146
                self.tipo()
                self.state = 147
                self.match(trabalhoFinal_lucasParser.ID)
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7:
                    self.state = 148
                    self.match(trabalhoFinal_lucasParser.T__6)
                    self.state = 149
                    self.tipo()
                    self.state = 150
                    self.match(trabalhoFinal_lucasParser.ID)
                    self.state = 156
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parametros(self):
            return self.getTypedRuleContext(trabalhoFinal_lucasParser.ParametrosContext,0)


        def funcBloco(self):
            return self.getTypedRuleContext(trabalhoFinal_lucasParser.FuncBlocoContext,0)


        def getRuleIndex(self):
            return trabalhoFinal_lucasParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain" ):
                return visitor.visitMain(self)
            else:
                return visitor.visitChildren(self)




    def main(self):

        localctx = trabalhoFinal_lucasParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_main)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(trabalhoFinal_lucasParser.T__12)
            self.state = 160
            self.match(trabalhoFinal_lucasParser.T__8)
            self.state = 161
            self.parametros()
            self.state = 162
            self.match(trabalhoFinal_lucasParser.T__9)
            self.state = 163
            self.match(trabalhoFinal_lucasParser.T__10)
            self.state = 164
            self.funcBloco()
            self.state = 165
            self.match(trabalhoFinal_lucasParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def print_(self):
            return self.getTypedRuleContext(trabalhoFinal_lucasParser.PrintContext,0)


        def input_(self):
            return self.getTypedRuleContext(trabalhoFinal_lucasParser.InputContext,0)


        def for_(self):
            return self.getTypedRuleContext(trabalhoFinal_lucasParser.ForContext,0)


        def expr(self):
            return self.getTypedRuleContext(trabalhoFinal_lucasParser.ExprContext,0)


        def comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(trabalhoFinal_lucasParser.ComandosContext)
            else:
                return self.getTypedRuleContext(trabalhoFinal_lucasParser.ComandosContext,i)


        def while_(self):
            return self.getTypedRuleContext(trabalhoFinal_lucasParser.WhileContext,0)


        def return_(self):
            return self.getTypedRuleContext(trabalhoFinal_lucasParser.ReturnContext,0)


        def atribuicao(self):
            return self.getTypedRuleContext(trabalhoFinal_lucasParser.AtribuicaoContext,0)


        def callFunc(self):
            return self.getTypedRuleContext(trabalhoFinal_lucasParser.CallFuncContext,0)


        def getRuleIndex(self):
            return trabalhoFinal_lucasParser.RULE_comandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandos" ):
                listener.enterComandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandos" ):
                listener.exitComandos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandos" ):
                return visitor.visitComandos(self)
            else:
                return visitor.visitChildren(self)




    def comandos(self):

        localctx = trabalhoFinal_lucasParser.ComandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_comandos)
        self._la = 0 # Token type
        try:
            self.state = 196
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.print_()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.input_()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 169
                self.for_()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 170
                self.match(trabalhoFinal_lucasParser.T__13)
                self.state = 171
                self.match(trabalhoFinal_lucasParser.T__8)
                self.state = 172
                self.expr(0)
                self.state = 173
                self.match(trabalhoFinal_lucasParser.T__9)
                self.state = 174
                self.match(trabalhoFinal_lucasParser.T__10)
                self.state = 176 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 175
                    self.comandos()
                    self.state = 178 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 1099515707392) != 0):
                        break

                self.state = 180
                self.match(trabalhoFinal_lucasParser.T__11)
                self.state = 190
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==15:
                    self.state = 181
                    self.match(trabalhoFinal_lucasParser.T__14)
                    self.state = 182
                    self.match(trabalhoFinal_lucasParser.T__10)
                    self.state = 184 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 183
                        self.comandos()
                        self.state = 186 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 1099515707392) != 0):
                            break

                    self.state = 188
                    self.match(trabalhoFinal_lucasParser.T__11)


                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 192
                self.while_()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 193
                self.return_()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 194
                self.atribuicao()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 195
                self.callFunc()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandosLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
